# rustychip

./: Cargo.toml  README.md
roms/: README.txt
src/: emulator.rs  interface.rs  lib.rs  main.rs
