[package]
name = "rustychip"
version = "0.1.0"
edition = "2021"
description = "Rusty Chip is a simple chip-8 emulator written in rust"
authors = ["Pedro Godinho <pedro.fernandez.godinho@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"]}
clap = { version = "3.2.14", features = ["derive"]}